--- a/LinkShortener.Client/package.json
+++ b/LinkShortener.Client/package.json
@@ -36,8 +36,9 @@
     "@angular/build": "^21.1.1",
     "@angular/cli": "^21.1.1",
     "@angular/compiler-cli": "^21.1.0",
-    "jsdom": "^27.1.0",
+    "@vitest/browser": "^4.0.18",
+    "jsdom": "^27.4.0",
     "typescript": "~5.9.2",
-    "vitest": "^4.0.8"
+    "vitest": "^4.0.18"
   }
 }
